--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
       aspectRatio: 0.9,
       weekNumbers: true,
       weekNumberCalculation: 'ISO',
-      // API Key restricted to brakelessmc.github.io
-      googleCalendarApiKey: 'AIzaSyCj2Rv2uig5oIMda0ZY51xTVb44kJY4nfw',
+      // API Key restricted to pokerkalender.github.io
+      googleCalendarApiKey: 'AIzaSyClvgEk6MNlCnuYACfIDvu0vd6Bx0d3Q2I',
       firstDay: 1,
       eventSources: [
         // Svenska helgdagar
         {
-          googleCalendarId: 'qkkuq459qo5c2kteqbfvgn8mt29ctcka@import.calendar.google.com',
+          googleCalendarId: 'sv.swedish#holiday@group.v.calendar.google.com',
           color: '#ac725e'
         },
-        // Stuga 1
+        // Livepoker Sverige
         {
-          googleCalendarId: 'c_sfqiomb67q46o6q97r48aael1o@group.calendar.google.com',
+          googleCalendarId: 'j7jouqe7fs8m79qiud1dmqh3go@group.calendar.google.com',
           color: '#4986e7',
           eventDisplay: 'block'
         },
-        // Stuga 2
+        // Livepoker Utomlands
         {
-          googleCalendarId: 'c_bu9ij0rgbk4vi9mpj0ermv9bak@group.calendar.google.com',
+          googleCalendarId: '9be1m0b94v4u8ggkjagtaiuk0s@group.calendar.google.com',
           color: '#ffad46',
           eventDisplay: 'block'
         },
-        // Stuga 3
+        // Onlinepoker
         {
-          googleCalendarId: 'c_jqt2nvgic3squ0bqv968rob040@group.calendar.google.com',
+          googleCalendarId: 'dhbhs4resccc34atk21k42af3s@group.calendar.google.com',
           color: '#f83a22',
           eventDisplay: 'auto'
         }
