--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
           color: '#4986e7',
           eventDisplay: 'block'
         },
+        // Klubbpoker
+        {
+          googleCalendarId: 'vastanforspoker@gmail.com',
+          color: '#ffad46',
+          eventDisplay: 'block'
+        },
         // Livepoker Utomlands
         {
           googleCalendarId: '9be1m0b94v4u8ggkjagtaiuk0s@group.calendar.google.com',
