--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       ],
 
 
-      events: [
+      <!-- events: [
 // 2021 PRE
         {
           start: '2021-01-01',
@@ -79,7 +79,7 @@
           display: 'background',
           color: '#EE3333'
         }
-      ],
+      ], -->
 
       eventClick: function(info) {
         info.jsEvent.preventDefault(); // don't let the browser navigate
