--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
       locale: 'sv',
-      contentHeight: 600,
+//      contentHeight: 600,
+      height: '100%',
       aspectRatio: 1.5,
       weekNumbers: true,
       weekNumberCalculation: 'ISO',
