--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       locale: 'sv',
 //      contentHeight: 600,
       height: '100%',
-      aspectRatio: 1.5,
+//      aspectRatio: 1.5,
       weekNumbers: true,
       weekNumberCalculation: 'ISO',
       // API Key restricted to pokerkalender.github.io
