--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     var calendar = new FullCalendar.Calendar(calendarEl, {
       locale: 'sv',
 //      contentHeight: 600,
-      height: '100%',
+      height: 'auto',
 //      aspectRatio: 1.5,
       weekNumbers: true,
       weekNumberCalculation: 'ISO',
