--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     var calendar = new FullCalendar.Calendar(calendarEl, {
       locale: 'sv',
 //      contentHeight: 600,
-      height: 'auto',
+//      height: 'auto',
 //      aspectRatio: 1.5,
       weekNumbers: true,
       weekNumberCalculation: 'ISO',
@@ -70,7 +70,7 @@
 <style>
 
   body {
-    margin: 10px 10px;
+    margin: 40px 10px;
     padding: 0;
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     font-size: 14px;
@@ -84,6 +84,7 @@
   }
 
   #calendar {
+    max-width: 1100px;
     margin: 0 auto;
   }
 
