--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset='utf-8' />
 <link href='/lib/main.css' rel='stylesheet' />
+<link href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet'>
+<link href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css' rel='stylesheet'>
 <script src='https://cdn.jsdelivr.net/npm/moment@2.27.0/min/moment.min.js'></script>
 <script src='/lib/main.js'></script>
 <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/moment@5.5.0/main.global.min.js'></script>
@@ -14,6 +16,7 @@
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
       locale: 'sv',
+      themeSystem: 'bootstrap5',
 //      contentHeight: 600,
 //      height: 'auto',
       aspectRatio: 2,
