--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
       locale: 'sv',
-//      themeSystem: 'bootstrap5',
+      themeSystem: 'bootstrap5',
 //      contentHeight: 600,
 //      height: 'auto',
       aspectRatio: 1.8,
