--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         // Livepoker Sverige
         {
           googleCalendarId: 'j7jouqe7fs8m79qiud1dmqh3go@group.calendar.google.com',
-          color: '#4986e7',
+          color: '#E11C2E',
           eventDisplay: 'block'
         },
         // Klubbpoker
@@ -44,7 +44,7 @@
         // Livepoker Utomlands
         {
           googleCalendarId: '9be1m0b94v4u8ggkjagtaiuk0s@group.calendar.google.com',
-          color: '#ffad46',
+          color: '#4CE11C',
           eventDisplay: 'block'
         },
         // Onlinepoker
