--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         // Livepoker Utomlands
         {
           googleCalendarId: '9be1m0b94v4u8ggkjagtaiuk0s@group.calendar.google.com',
-          color: '#4CE11C',
+          color: '#2FB40D',
           eventDisplay: 'block'
         },
         // Onlinepoker
