--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css' rel='stylesheet'>
 <script src='/lib/main.js'></script>
 <script src='/lib/locales/sv.js'></script>
+<script type='text/javascript' src='config.js'></script>
 <script type='text/javascript'>
 
   document.addEventListener('DOMContentLoaded', function() {
@@ -21,7 +22,7 @@
       weekNumbers: true,
       weekNumberCalculation: 'ISO',
       // API Key restricted to pokerkalender.github.io
-      googleCalendarApiKey: 'AIzaSyClvgEk6MNlCnuYACfIDvu0vd6Bx0d3Q2I',
+      googleCalendarApiKey: config.googleCalendarApiKey,
       firstDay: 1,
       eventSources: [
         // Svenska helgdagar
@@ -31,25 +32,25 @@
         },
         // Livepoker Sverige
         {
-          googleCalendarId: 'j7jouqe7fs8m79qiud1dmqh3go@group.calendar.google.com',
+          googleCalendarId: config.googleCalendarId_live_sweden,
           color: '#E11C2E',
           eventDisplay: 'block'
         },
         // Klubbpoker
         {
-          googleCalendarId: 'vastanforspoker@gmail.com',
+          googleCalendarId: config.googleCalendarId_klubbpoker,
           color: '#ffad46',
           eventDisplay: 'block'
         },
         // Livepoker Utomlands
         {
-          googleCalendarId: '9be1m0b94v4u8ggkjagtaiuk0s@group.calendar.google.com',
+          googleCalendarId: config.googleCalendarId_live_utomlands,
           color: '#2FB40D',
           eventDisplay: 'block'
         },
         // Onlinepoker
         {
-          googleCalendarId: 'dhbhs4resccc34atk21k42af3s@group.calendar.google.com',
+          googleCalendarId: config.googleCalendarId_onlinepoker,
           color: '#f83a22',
           eventDisplay: 'auto'
         }
