--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       weekNumbers: true,
       weekNumberCalculation: 'ISO',
       // API Key restricted to pokerkalender.github.io
-      googleCalendarApiKey: process.env.GOOGLECALENDARAPIKEY,
+      googleCalendarApiKey: 'AIzaSyClvgEk6MNlCnuYACfIDvu0vd6Bx0d3Q2I',
       firstDay: 1,
       eventSources: [
         // Svenska helgdagar
@@ -31,25 +31,25 @@
         },
         // Livepoker Sverige
         {
-          googleCalendarId: process.env.GOOGLECALENDARID_LIVE_SWEDEN,
+          googleCalendarId: 'j7jouqe7fs8m79qiud1dmqh3go@group.calendar.google.com',
           color: '#E11C2E',
           eventDisplay: 'block'
         },
         // Klubbpoker
         {
-          googleCalendarId: process.env.GOOGLECALENDARID_KLUBBPOKER,
+          googleCalendarId: 'vastanforspoker@gmail.com',
           color: '#ffad46',
           eventDisplay: 'block'
         },
         // Livepoker Utomlands
         {
-          googleCalendarId: process.env.GOOGLECALENDARID_LIVE_UTOMLANDS,
+          googleCalendarId: '9be1m0b94v4u8ggkjagtaiuk0s@group.calendar.google.com',
           color: '#2FB40D',
           eventDisplay: 'block'
         },
         // Onlinepoker
         {
-          googleCalendarId: process.env.GOOGLECALENDARID_ONLINEPOKER,
+          googleCalendarId: 'dhbhs4resccc34atk21k42af3s@group.calendar.google.com',
           color: '#f83a22',
           eventDisplay: 'auto'
         }
