--- a/index.html
+++ b/index.html
@@ -96,5 +96,16 @@
 
   <div id='calendar'></div>
 
+  <p><span class="fc-event-dot" style="background-color:#99cc33"></span> Slalom&nbsp;&nbsp;
+     <span class="fc-event-dot" style="background-color:#c58917"></span>&nbsp;Freestyle&nbsp;&nbsp;
+     <span class="fc-event-dot" style="background-color:#f24fe7"></span> Leader/Instructor/Coach Development&nbsp;&nbsp;
+     <span class="fc-event-dot" style="background-color:#800080"></span> Multi-Discipline&nbsp;&nbsp;
+     <span class="fc-event-dot" style="background-color:#555555"></span> Other&nbsp;&nbsp;
+     <span class="fc-event-dot" style="background-color:#ff6600"></span> Festivals&nbsp;&nbsp;
+     <span class="fc-event-dot" style="background-color:#3366ff"></span> Paddler Development&nbsp;&nbsp;
+     <span class="fc-event-dot" style="background-color:#c11b17"></span> Club Events&nbsp;&nbsp;
+     <span class="fc-event-dot" style="background-color:#066066"></span> Canoe Polo&nbsp;&nbsp;
+  </p>
+
 </body>
 </html>
