Another test of legend

--- a/index.html
+++ b/index.html
@@ -96,16 +96,100 @@
 
   <div id='calendar'></div>
 
-  <p><span class="fc-event-dot" style="background-color:#99cc33"></span> Slalom&nbsp;&nbsp;
-     <span class="fc-event-dot" style="background-color:#c58917"></span>&nbsp;Freestyle&nbsp;&nbsp;
-     <span class="fc-event-dot" style="background-color:#f24fe7"></span> Leader/Instructor/Coach Development&nbsp;&nbsp;
-     <span class="fc-event-dot" style="background-color:#800080"></span> Multi-Discipline&nbsp;&nbsp;
-     <span class="fc-event-dot" style="background-color:#555555"></span> Other&nbsp;&nbsp;
-     <span class="fc-event-dot" style="background-color:#ff6600"></span> Festivals&nbsp;&nbsp;
-     <span class="fc-event-dot" style="background-color:#3366ff"></span> Paddler Development&nbsp;&nbsp;
-     <span class="fc-event-dot" style="background-color:#c11b17"></span> Club Events&nbsp;&nbsp;
-     <span class="fc-event-dot" style="background-color:#066066"></span> Canoe Polo&nbsp;&nbsp;
-  </p>
+  <table>
+    <tbody>
+        <tr>
+            <td class="term">
+                Canvassing
+            </td>
+            <td class="color">
+                <div class="legend-color canvassing">
+                    <span>Canvassing</span>
+                </div>
+            </td>
+            <td class="term">
+                Conference
+            </td>
+            <td class="color">
+                <div class="legend-color conference">
+                    <span>Conference</span>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td class="term">
+                Election
+            </td>
+            <td class="color">
+                <div class="legend-color election">
+                    <span>Election</span>
+                </div>
+            </td>
+            <td class="term">
+                Fundraiser
+            </td>
+            <td class="color">
+                <div class="legend-color fundraiser">
+                    <span>Fundraiser</span>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td class="term">
+                General Interest
+            </td>
+            <td class="color">
+                <div class="legend-color general">
+                    <span>General Interest</span>
+                </div>
+            </td>
+            <td class="term">
+                Holiday
+            </td>
+            <td class="color">
+                <div class="legend-color holiday">
+                    <span>Holiday</span>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td class="term">
+                Meeting
+            </td>
+            <td class="color">
+                <div class="legend-color meeting">
+                    <span>Meeting</span>
+                </div>
+            </td>
+            <td class="term">
+                Phone Banking
+            </td>
+            <td class="color">
+                <div class="legend-color phone-banking">
+                    <span>Phone Banking</span>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td class="term">
+                Rally
+            </td>
+            <td class="color">
+                <div class="legend-color rally">
+                    <span>Rally</span>
+                </div>
+            </td>
+            <td class="term">
+                Workshop
+            </td>
+            <td class="color">
+                <div class="legend-color workshop">
+                    <span>Workshop</span>
+                </div>
+            </td>
+        </tr>
+    </tbody>
+</table>
 
 </body>
 </html>
