--- a/index.html
+++ b/index.html
@@ -88,6 +88,33 @@
     margin: 0 auto;
   }
 
+  p {
+    margin: 0;
+  }
+  .colorYellow {
+    background-color: #EE5;
+  }
+  .colorGreen {
+    background-color: #2B2;
+  }
+  .colorRed {
+    background-color: #E33;
+  }
+  .dot {
+    transform: scale(1.6,1.6);
+    height: 28px;
+    width: 28px;
+    border-radius: 50%;
+    float: left;
+    margin: 19px 1em;
+    border: 2px solid #333;
+    text-align: center;
+    font-weight: 700;
+    text-rendering: optimizeLegibility;
+    cursor: default;
+  }
+  .centerLabel {
+  }
 </style>
 </head>
 <body>
@@ -95,6 +122,17 @@
   <div id='loading'>loading...</div>
 
   <div id='calendar'></div>
+
+  <div class="container-fluid d-flex">
+    <div class="row d-flex align-items-center w-100">
+      <div class="p-0">
+        <indicator class="dot colorGreen" alt="Status Indicator: Normal">G</indicator>
+      </div>
+      <div class="col">
+        <p><b>Normal:</b> No issues found that would require the government to extend their normal processing guidelines.</p>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
