--- a/index.html
+++ b/index.html
@@ -126,13 +126,34 @@
   <div class="container-fluid d-flex">
     <div class="row d-flex align-items-center w-100">
       <div class="p-0">
-        <indicator class="dot colorGreen" alt="Status Indicator: Normal">G</indicator>
+        <indicator class="dot colorGreen" alt="Grön"></indicator>
       </div>
       <div class="col">
-        <p><b>Normal:</b> No issues found that would require the government to extend their normal processing guidelines.</p>
+        <p><b>Grön:</b></p>
       </div>
     </div>
   </div>
-
+    
+  <div class="container-fluid d-flex">
+    <div class="row d-flex align-items-center w-100">
+      <div class="p-0">
+        <indicator class="dot colorYellow" alt="Gul"></indicator>
+      </div>
+      <div class="col">
+        <p><b>Gul:</b></p>
+      </div>
+    </div>
+  </div>
+    
+  <div class="container-fluid d-flex">
+    <div class="row d-flex align-items-center w-100">
+      <div class="p-0">
+        <indicator class="dot colorRed" alt="Röd"></indicator>
+      </div>
+      <div class="col">
+        <p><b>Röd:</b></p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
