--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
     <div class="row d-flex align-items-center w-100">
       <div class="p-0">
         <indicator class="dot colorGreen" alt="Grön"></indicator>
+        <p><b>Grön:</b></p>
       </div>
       <div class="col">
         <p><b>Grön:</b></p>
