--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
     text-rendering: optimizeLegibility;
     cursor: default;
   }
-  .centerLabel {
-  }
+
 </style>
 </head>
 <body>
@@ -127,9 +126,8 @@
     <div class="row d-flex align-items-center w-100">
       <div class="p-0">
         <indicator class="dot colorGreen" alt="Grön"></indicator>
-        <p><b>Grön:</b></p>
       </div>
-      <div class="col">
+      <div class="p-0">
         <p><b>Grön:</b></p>
       </div>
     </div>
