--- a/index.html
+++ b/index.html
@@ -122,12 +122,49 @@
 
   <div id='calendar'></div>
 
+
+
+
+  <table border="1" cellpadding="1" cellspacing="1" style="width: 500px">
+    <tbody>
+      <tr>
+        <td>
+          <div class="p-0">
+            <indicator class="dot colorGreen" alt="Grön"></indicator>
+          </div>  
+        </td>
+        <td>
+          <div class="col">
+            <p><b>Grön:</b></p>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <indicator class="dot colorYellow" alt="Gul"></indicator>
+        </td>
+        <td>
+          <p><b>Gul:</b></p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          c</td>
+        <td>
+          cc</td>
+      </tr>
+    </tbody>
+  </table>
+
+
+
+
   <div class="container-fluid d-flex">
     <div class="row d-flex align-items-center w-100">
       <div class="p-0">
         <indicator class="dot colorGreen" alt="Grön"></indicator>
       </div>
-      <div class="p-0">
+      <div class="col">
         <p><b>Grön:</b></p>
       </div>
     </div>
