--- a/index.html
+++ b/index.html
@@ -129,13 +129,10 @@
     <tbody>
       <tr>
         <td>
-          <div class="p-0">
             <indicator class="dot colorGreen" alt="Grön"></indicator>
-          </div>  
         </td>
         <td>
-          <div class="col">
-            <p><b>Grön:</b></p>
+            <b>Grön:</b>
           </div>
         </td>
       </tr>
@@ -144,52 +141,20 @@
           <indicator class="dot colorYellow" alt="Gul"></indicator>
         </td>
         <td>
-          <p><b>Gul:</b></p>
+          <b>Gul:</b>
         </td>
       </tr>
       <tr>
         <td>
-          c</td>
+          <indicator class="dot colorRed" alt="Röd"></indicator>
+        </td>
         <td>
-          cc</td>
+          <b>Röd:</b>
+        </td>
       </tr>
     </tbody>
   </table>
 
 
-
-
-  <div class="container-fluid d-flex">
-    <div class="row d-flex align-items-center w-100">
-      <div class="p-0">
-        <indicator class="dot colorGreen" alt="Grön"></indicator>
-      </div>
-      <div class="col">
-        <p><b>Grön:</b></p>
-      </div>
-    </div>
-  </div>
-    
-  <div class="container-fluid d-flex">
-    <div class="row d-flex align-items-center w-100">
-      <div class="p-0">
-        <indicator class="dot colorYellow" alt="Gul"></indicator>
-      </div>
-      <div class="col">
-        <p><b>Gul:</b></p>
-      </div>
-    </div>
-  </div>
-    
-  <div class="container-fluid d-flex">
-    <div class="row d-flex align-items-center w-100">
-      <div class="p-0">
-        <indicator class="dot colorRed" alt="Röd"></indicator>
-      </div>
-      <div class="col">
-        <p><b>Röd:</b></p>
-      </div>
-    </div>
-  </div>
 </body>
 </html>
