--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <tr>
         <td>
             <indicator class="dot colorGreen" alt="Grön"></indicator>
-        </td>
+        </td style="width:10%">
         <td>
             <b>Grön:</b>
           </div>
