--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
       <tr>
         <td>
             <indicator class="dot colorGreen" alt="Grön"></indicator>
-        </td style="width:10%">
-        <td>
+        </td>
+        <td style="width:10%">
             <b>Grön:</b>
           </div>
         </td>
@@ -140,7 +140,7 @@
         <td>
           <indicator class="dot colorYellow" alt="Gul"></indicator>
         </td>
-        <td>
+        <td style="width:10%">
           <b>Gul:</b>
         </td>
       </tr>
@@ -148,7 +148,7 @@
         <td>
           <indicator class="dot colorRed" alt="Röd"></indicator>
         </td>
-        <td>
+        <td style="width:10%">
           <b>Röd:</b>
         </td>
       </tr>
