--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         // Livepoker Sverige
         {
           googleCalendarId: 'j7jouqe7fs8m79qiud1dmqh3go@group.calendar.google.com',
-          color: '#E11C2E',
+          color: '#0b5ed7',
           eventDisplay: 'block'
         },
         // Klubbpoker
@@ -92,14 +92,19 @@
     margin: 0;
   }
   .colorYellow {
-    background-color: #EE5;
+    background-color: #ffad46;
   }
   .colorGreen {
-    background-color: #2B2;
+    background-color: #2fb40d;
   }
   .colorRed {
-    background-color: #E33;
+    background-color: #f83a22;
   }
+  .colorBlue {
+    background-color: #0b5ed7;
+  }
+
+
   .dot {
     transform: scale(1.6,1.6);
     height: 28px;
@@ -125,33 +130,42 @@
 
 
 
-  <table border="1" cellpadding="1" cellspacing="1" style="width: 500px">
+  <table border="1" cellpadding="0" cellspacing="0" style="width: 500px">
     <tbody>
       <tr>
-        <td>
+        <td style="width:10%">
             <indicator class="dot colorGreen" alt="Grön"></indicator>
         </td>
-        <td style="width:10%">
-            <b>Grön:</b>
+        <td>
+            <b>Livepoker utomlands</b>
           </div>
         </td>
       </tr>
       <tr>
-        <td>
+        <td style="width:10%">
           <indicator class="dot colorYellow" alt="Gul"></indicator>
         </td>
-        <td style="width:10%">
-          <b>Gul:</b>
+        <td>
+          <b>Klubbpoker VPK</b>
         </td>
       </tr>
       <tr>
-        <td>
+        <td style="width:10%">
           <indicator class="dot colorRed" alt="Röd"></indicator>
         </td>
-        <td style="width:10%">
-          <b>Röd:</b>
+        <td>
+          <b>Onlinepoker</b>
         </td>
       </tr>
+      <tr>
+        <td style="width:10%">
+          <indicator class="dot colorBlue" alt="Blå"></indicator>
+        </td>
+        <td>
+          <b>Livepoker Sverige</b>
+        </td>
+      </tr>
+
     </tbody>
   </table>
 
