--- a/index.html
+++ b/index.html
@@ -170,5 +170,37 @@
   </table>
 
 
+
+  <table align="left" border="1" cellpadding="0" cellspacing="0" style="width: 500px">
+    <tbody>
+      <tr>
+        <td style="width:15px">
+          <indicator class="dot colorGreen" alt="Grön"></indicator>
+        </td>
+        <td>
+          <b>Livepoker utomlands</b>
+        </td>
+        <td style="width:15px">
+          <indicator class="dot colorYellow" alt="Gul"></indicator>
+        </td>
+        <td>
+          <b>Klubbpoker VPK</b>
+        </td>
+        <td style="width:15px">
+          <indicator class="dot colorRed" alt="Röd"></indicator>
+        </td>
+        <td>
+          <b>Onlinepoker</b>
+        </td>
+        <td style="width:15px">
+          <indicator class="dot colorBlue" alt="Blå"></indicator>
+        </td>
+        <td>
+          <b>Livepoker Sverige</b>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
 </body>
 </html>
