--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 
 
-  <table align="left" border="1" cellpadding="0" cellspacing="0" style="width: 500px">
+  <table align="left" border="1" cellpadding="0" cellspacing="0" style="width: 100%">
     <tbody>
       <tr>
         <td style="width:15px">
