--- a/index.html
+++ b/index.html
@@ -84,26 +84,19 @@
     right: 10px;
   }
 
-  #calendar {
-    margin: 0 auto;
-  }
+  #calendar { margin: 0 auto; }
 
-  p {
-    margin: 0;
-  }
-  .colorYellow {
-    background-color: #ffad46;
-  }
-  .colorGreen {
-    background-color: #2fb40d;
-  }
-  .colorRed {
-    background-color: #f83a22;
-  }
-  .colorBlue {
-    background-color: #0b5ed7;
-  }
+  a { color: #000000; } /* CSS link color */
 
+  p { margin: 0; }
+
+  .colorYellow { background-color: #ffad46; }
+
+  .colorGreen { background-color: #2fb40d; }
+
+  .colorRed { background-color: #f83a22; }
+
+  .colorBlue { background-color: #0b5ed7; }
 
   .dot {
     transform: scale(1.6,1.6);
@@ -127,51 +120,7 @@
 
   <div id='calendar'></div>
 
-
-
-
-  <table border="0" cellpadding="0" cellspacing="0" style="width: 500px">
-    <tbody>
-      <tr>
-        <td style="width:10%">
-            <indicator class="dot colorGreen" alt="Grön"></indicator>
-        </td>
-        <td>
-            <b>Livepoker utomlands</b>
-          </div>
-        </td>
-      </tr>
-      <tr>
-        <td style="width:10%">
-          <indicator class="dot colorYellow" alt="Gul"></indicator>
-        </td>
-        <td>
-          <b>Klubbpoker VPK</b>
-        </td>
-      </tr>
-      <tr>
-        <td style="width:10%">
-          <indicator class="dot colorRed" alt="Röd"></indicator>
-        </td>
-        <td>
-          <b>Onlinepoker</b>
-        </td>
-      </tr>
-      <tr>
-        <td style="width:10%">
-          <indicator class="dot colorBlue" alt="Blå"></indicator>
-        </td>
-        <td>
-          <b>Livepoker Sverige</b>
-        </td>
-      </tr>
-
-    </tbody>
-  </table>
-
-
-
-  <table align="left" border="1" cellpadding="0" cellspacing="0" style="width: 100%">
+  <table align="left" border="0" cellpadding="0" cellspacing="0" style="width: 100%">
     <tbody>
       <tr>
         <td style="width:15px">
