--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
   <div id='calendar'></div>
 
-  <table align="left" border="0" cellpadding="0" cellspacing="0" style="width: 100%">
+  <table border="1" cellpadding="0" cellspacing="0" style="width: 100%">
     <tbody>
       <tr>
         <td style="width:15px">
