--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 //      contentHeight: 600,
 //      height: 'auto',
       aspectRatio: 2.2,
+      contentHeight: 'auto',
       weekNumbers: true,
       weekNumberCalculation: 'ISO',
       // API Key restricted to pokerkalender.github.io
