--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset='utf-8' />
 <link href='/lib/main.css' rel='stylesheet' />
-<link href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet'>
+{{/*  <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet'>  */}}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384- GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
 <link href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css' rel='stylesheet'>
 <script src='/lib/main.js'></script>
 <script src='/lib/locales/sv.js'></script>
@@ -110,7 +111,8 @@
 
 </style>
 </head>
-<body>
+{{/*  <body>  */}}
+<body is="dmx-app" id="darkmodetest" dmx-bind:data-bs-theme="input1.value">
 
   <div id='loading'>loading...</div>
 
