--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 </style>
 </head>
-<body is="dmx-app" id="darkmodetest" dmx-bind:data-bs-theme="input1.value">
+<body is="dmx-app" id="darkmodetest" dmx-bind:data-bs-theme="dark">
 
   <div id='loading'>loading...</div>
 
