--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
   body {
     margin: 10px 10px;
     padding: 0;
+    background-color: #1f1f1f;
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     font-size: 14px;
   }
