--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   #calendar { margin: 0 auto; }
 
-  a { color: #000000; } /* CSS link color */
+  a { color: #ffffff; } /* CSS link color */
 
   p { margin: 0; }
 
