--- a/index.html
+++ b/index.html
@@ -124,25 +124,25 @@
           <indicator class="dot colorGreen" alt="Grön"></indicator>
         </td>
         <td>
-          <span style="color:#ffffff"><b>Livepoker utomlands</b></span>
+          <span style="color:#ffffff;"><b>Livepoker utomlands</b></span>
         </td>
         <td style="width:15px">
           <indicator class="dot colorYellow" alt="Gul"></indicator>
         </td>
         <td>
-          <span style="color:#ffffff"></span><b>Klubbpoker VPK</b></span>
+          <span style="color:#ffffff;"><b>Klubbpoker VPK</b></span>
         </td>
         <td style="width:15px">
           <indicator class="dot colorRed" alt="Röd"></indicator>
         </td>
         <td>
-          <span style="color:#ffffff"></span><b>Onlinepoker</b></span>
+          <span style="color:#ffffff;"><b>Onlinepoker</b></span>
         </td>
         <td style="width:15px">
           <indicator class="dot colorBlue" alt="Blå"></indicator>
         </td>
         <td>
-          <span style="color:#ffffff"></span><b>Livepoker Sverige</b></span>
+          <span style="color:#ffffff;"><b>Livepoker Sverige</b></span>
         </td>
       </tr>
     </tbody>
