--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       themeSystem: 'bootstrap5',
 //      contentHeight: 600,
 //      height: 'auto',
-//      aspectRatio: 2.2,
+      aspectRatio: 1.35,
       contentHeight: 'auto',
       weekNumbers: true,
       weekNumberCalculation: 'ISO',
