--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     var calendar = new FullCalendar.Calendar(calendarEl, {
       locale: 'sv',
       themeSystem: 'bootstrap5',
-//      contentHeight: 600,
-//      height: 'auto',
-      aspectRatio: 1.35,
       contentHeight: 'auto',
+//      contentHeight: 600,
+//      aspectRatio: 2.2,
       weekNumbers: true,
       weekNumberCalculation: 'ISO',
       // API Key restricted to pokerkalender.github.io
@@ -71,7 +70,7 @@
     padding: 0;
     background-color: #1f1f1f;
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 18px;
   }
 
   #loading {
