--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     var calendarEl = document.getElementById('calendar');
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
+      initialView: 'listMonth',
       locale: 'sv',
       themeSystem: 'bootstrap5',
       contentHeight: 'auto',
