--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
 
       eventClick: function(info) {
         info.jsEvent.preventDefault(); // don't let the browser navigate
+
+        if (info.event.url) {
+          window.open(info.event.description);
       }
+    }
 
     });
 
