--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       eventClick: function(info) {
         var eventObj = info.event;
-        alert('ID: ' + info.event.id + 'Title: ' + info.event.title + 'Start: ' + info.event.start  + 'Description: ' + info.event.extendedProps.description );
+        alert('Description: ' + info.event.extendedProps.description );
     }
 
 
