--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
 //      initialView: 'listWeek',
+      defaultView: $(window).width() < 765 ? 'basicDay':'agendaWeek',
       locale: 'sv',
       themeSystem: 'bootstrap5',
       contentHeight: 'auto',
