--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
 //      initialView: 'listWeek',
-      initialView: window.innerWidth >= 765 ? 'listMonth' : 'dayGridMonth',
+      initialView: window.innerWidth >= 765 ? 'dayGridMonth' : 'listMonth',
       locale: 'sv',
       themeSystem: 'bootstrap5',
       contentHeight: 'auto',
