--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
 //      initialView: 'listWeek',
-      initialView: window.innerWidth >= 765 ? 'dayGridMonth' : 'listMonth',
       locale: 'sv',
       themeSystem: 'bootstrap5',
       contentHeight: 'auto',
 //      contentHeight: 600,
 //      aspectRatio: 2.2,
+      fixedWeekCount: false,
+      showNonCurrentDates: false,
       weekNumbers: true,
       weekNumberCalculation: 'ISO',
       // API Key restricted to pokerkalender.github.io
