no custom button

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         info.jsEvent.preventDefault();
     },
       headerToolbar: {
-        left: 'prev,next today myCustomButton',
+        left: 'prev,next today',
         center: 'title',
         right: 'dayGridMonth,listMonth'
       }
