--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 //      initialView: 'listWeek',
       locale: 'sv',
       themeSystem: 'bootstrap5',
-//      contentHeight: 'auto',
+      contentHeight: 'auto',
 //      contentHeight: 600,
 //      aspectRatio: 2.2,
       fixedWeekCount: false,
